# jorja-rss-bot

./: .gitignore  Procfile  celerybeat-schedule.dir  main.py  message.py  migrating.py  pyproject.toml  requirements.txt  update.py
duzinho_teste_bot/: __init__.py  callbacks.py  send_message.py  settings.py
duzinho_teste_bot/commands/: __init__.py  botao.py  echo.py  ehoph.py  hello.py  set_language.py  set_timezone.py  settings.py  start.py  timezone.py  wesley.py
duzinho_teste_bot/commands/feeds/: __init__.py  add.py  delete.py  export.py  feeds.py  importing.py
duzinho_teste_bot/database/: __init__.py  db.py  models.py
duzinho_teste_bot/database/models/: __init__.py  feeds.py  subscriptions.py  users.py
duzinho_teste_bot/responses/: __init__.py  callbacks.py  import_command.py
duzinho_teste_bot/settings/: __init__.py  settings.py
duzinho_teste_bot/utils/: __init__.py  flags.py  gmt.py  language.py  parse.py  tasks.py
duzinho_teste_bot/utils/feed/: __init__.py  add_feed.py
duzinho_teste_bot/utils/texts/: __init__.py  en.py  es.py  pt_br.py
tests/: test_duzinho_teste_bot.py
